Add links and goal

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ Patterns and antipatterns\* in
 
 Some familiarity with this tech will be assumed.
 
+Goal: deeper understanding will make scripts more reliable, faster to write and execute, easier to maintain.
+
 Feel free to ask questions throughout, but there's a lot to cover, so I might skim certain parts or loop back for deeper dives as time permits.
 
 <small>\* In the tradition of [this blog post](https://kentcdodds.com/blog/common-mistakes-with-react-testing-library), for example (or the Drake meme). Terms will be defined momentarily.</small>
@@ -716,19 +718,21 @@ Verbose but correct.
 
 # Thanks!
 
-- Browser Conference (Zach!)
-- AppSignal (Ana!)
-- SerpAPI (Julien!)
+- [Browser Conference](https://www.browserconference.com/) (Zach!)
+- [AppSignal](https://blog.appsignal.com/) (Ana!)
+- [SerpAPI](https://serpapi.com/blog/) (Julien!)
 - the Stack Overflow community
-- My colleagues at Qualified.io/Andela
-- Contributors to open source technologies mentioned here
+- My colleagues at [Qualified.io](https://www.qualified.io/) and [Andela](https://www.andela.com)
+- My mentees at [Codementor](https://www.codementor.io/@ggorlen)
+- Contributors to open source technologies discussed or used here:
   - [Playwright](https://github.com/microsoft/playwright/)
   - [Puppeteer](https://github.com/puppeteer/puppeteer/)
   - [Cheerio](https://github.com/cheeriojs/cheerio)
   - [Remark](https://github.com/gnab/remark) (markdown slides)
-- Kent Dodds
-- Grug-Brained Dev
-- My partner Emily
+- [Kent Dodds](https://kentcdodds.com/)
+- [Grug-Brained Dev](https://grugbrain.dev/)
+- [My partner Emily](https://www.instagram.com/emilyhuston_photography/)
+- Last, but not least: YOU!
 
 ---
 
