--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ fetch(url)
 - Gets you raw, unformatted data
 - ...But not always feasible
 
-<small>(I have [dozens](https://stackoverflow.com/a/78376148/6243352) of examples of speedups replacing Cheerio with Puppeteer)</small>
+<small>(I have [dozens](https://stackoverflow.com/a/78376148/6243352) of examples of speedups replacing Puppeteer with Cheerio)</small>
 
 ---
 
